--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,9 +17,12 @@ importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicFeatures,makeTxDbFromBiomart)
 importFrom(GenomicFeatures,makeTxDbFromGFF)
 importFrom(GenomicFeatures,makeTxDbFromUCSC)
+importFrom(GenomicRanges,makeGRangesFromDataFrame)
 importFrom(MASS,Null)
 importFrom(MASS,ginv)
 importFrom(RBGL,connectedComp)
+importFrom(S4Vectors,queryHits)
+importFrom(S4Vectors,subjectHits)
 importFrom(affxparser,writeCdf)
 importFrom(doParallel,registerDoParallel)
 importFrom(foreach,"%dopar%")
