Bugs Fixed. Version Bump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,8 @@ export(PrepareBam_EP)
 import(Matrix)
 import(SGSeq)
 import(SummarizedExperiment)
-importFrom("methods",is)
-importFrom(GenomeInfoDb,"seqlevelsStyle<-")
+importFrom('methods',is)
+importFrom(GenomeInfoDb,'seqlevelsStyle<-')
 importFrom(GenomeInfoDb,seqlevelsStyle)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicFeatures,makeTxDbFromBiomart)
