--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: EventPointer
 Type: Package
 Title: Identification and statistical analysis of alternative splicing events using junction arrays or RNASeq data 
-Version: 0.99.18
+Version: 0.99.19
 Author: Juan Pablo Romero
 Maintainer: Juan Pablo Romero <jpromero@ceit.es>
 Description: EventPointer is a software to identify alternative splicing events
@@ -32,7 +32,9 @@ Imports: GenomicFeatures,
           S4Vectors
 Suggests: knitr,
           rmarkdown,
-          BiocStyle
+          BiocStyle,
+          RUnit,
+          BiocGenerics
 License: Artistic-2.0
 LazyData: true
 RoxygenNote: 6.0.1
