--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: EventPointer
 Type: Package
 Title: Identification and statistical analysis of alternative splicing events using junction arrays or RNASeq data 
-Version: 0.99.25
+Version: 0.99.26
 Author: Juan Pablo Romero
 Maintainer: Juan Pablo Romero <jpromero@ceit.es>
 Description: EventPointer is a software to identify alternative splicing events
@@ -40,3 +40,5 @@ LazyData: true
 RoxygenNote: 6.0.1
 biocViews: AlternativeSplicing, DifferentialSplicing, mRNAMicroarray, RNASeq, Transcription, Sequencing
 VignetteBuilder: knitr
+Url: https://github.com/jpromeror/EventPointer
+BugReports: https://github.com/jpromeror/EventPointer/issues
