--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,21 @@
 Package: EventPointer
 Type: Package
-Title: Identification and statistical analysis of alternative splicing events
-    using junction arrays or RNASeq data
-Version: 0.99.30
-Author: Juan Pablo Romero
+Title: An effective identification of alternative splicing events
+	   using junction arrays and RNA-Seq data
+Version: 0.99.31
+Author: Juan Pablo Romero, Ander Muniategui, Fernando Carazo, Ander Aramburu, Angel Rubio
 Maintainer: Juan Pablo Romero <jpromero@ceit.es>
-Description: EventPointer is a software to identify alternative splicing events
-    in complex experimental designs such as time course and paired samples studies.
-    The algorithm can be applied to both data from Affymetrix arrays and Sequencing
-    (RNASeq) data.
+Description: EventPointer is an R package to identify alternative splicing events 
+		in complex experimental designs such as time course and paired samples 
+		studies. The algorithm can be used to analyze data from either junction 
+		arrays (Affymetrix Arrays) or sequencing data (RNA-Seq). 
+		The software retrieves a data.frame with the detected alternative splicing 
+		events: gene name, type of event (cassette, alternative 3',...,etc), genomic 
+		position, statistical significance and percent spliced in (Delta PSI) for all 
+		the events.
+		The algorithm can generate a series of files to visualize the detected alternative 
+		splicing events in IGV. This eases the interpretation of results and the design 
+		of primers for standard PCR validation.
 Depends:
     R (>= 3.4),
     SGSeq,
@@ -42,9 +49,8 @@ Suggests:
     BiocGenerics
 License: Artistic-2.0
 LazyData: true
-RoxygenNote: 5.0.1
-biocViews: AlternativeSplicing, DifferentialSplicing, mRNAMicroarray, RNASeq,
-    Transcription, Sequencing
+RoxygenNote: 6.0.1
+biocViews: AlternativeSplicing, DifferentialSplicing, mRNAMicroarray, RNASeq, Transcription, Sequencing
 VignetteBuilder: knitr
 Url: https://github.com/jpromeror/EventPointer
 BugReports: https://github.com/jpromeror/EventPointer/issues
