--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,16 @@ Package: EventPointer
 Type: Package
 Title: An effective identification of alternative splicing events
 	   using junction arrays and RNA-Seq data
-Version: 0.99.34
+Version: 0.99.35
 Author: Juan Pablo Romero, Ander Muniategui, Fernando Carazo, Ander Aramburu, Angel Rubio
 Maintainer: Juan Pablo Romero <jpromero@ceit.es>
 Description: EventPointer is an R package to identify alternative splicing events 
 		that involve either simple (case-control experiment) or complex experimental designs 
 		such as time course experiments and studies including paired-samples. The algorithm can
 		be used to analyze data from either junction arrays (Affymetrix Arrays) or sequencing data (RNA-Seq). 
-		The software retrieves a data.frame with the detected alternative splicing 
+		The software returns a data.frame with the detected alternative splicing 
 		events: gene name, type of event (cassette, alternative 3',...,etc), genomic 
-		position, statistical significance and percent spliced in (Delta PSI) for all 
+		position, statistical significance and increment of the percent spliced in (Delta PSI) for all 
 		the events.
 		The algorithm can generate a series of files to visualize the detected alternative 
 		splicing events in IGV. This eases the interpretation of results and the design 
