--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,19 +2,18 @@
 
 export(CDFfromGTF)
 export(CDFfromGTF_Multipath)
-export(EventDetectionMultipath)
 export(EventDetection)
+export(EventDetectionMultipath)
 export(EventPointer)
 export(EventPointer_IGV)
 export(EventPointer_RNASeq)
 export(EventPointer_RNASeq_IGV)
-export(PrepareBam_EP)
+export(EventPointer_RNASeq_TranRef)
 export(EventsGTFfromTrancriptomeGTF)
 export(GetPSI_FromTranRef)
 export(PSI_Statistic)
-export(getInfo)
+export(PrepareBam_EP)
 export(getbootstrapkallisto)
-export(EventPointer_RNASeq_TranRef)
 import(Matrix)
 import(SGSeq)
 import(SummarizedExperiment)
@@ -25,14 +24,19 @@ importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicFeatures,makeTxDbFromBiomart)
 importFrom(GenomicFeatures,makeTxDbFromGFF)
 importFrom(GenomicFeatures,makeTxDbFromUCSC)
+importFrom(GenomicRanges,granges)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
+importFrom(IRanges,"%over%")
+importFrom(IRanges,disjoin)
+importFrom(IRanges,reduce)
+importFrom(IRanges,relist)
 importFrom(MASS,Null)
 importFrom(MASS,ginv)
 importFrom(RBGL,connectedComp)
 importFrom(S4Vectors,queryHits)
 importFrom(S4Vectors,subjectHits)
-importFrom(S4Vectors,split)
 importFrom(affxparser,writeCdf)
+importFrom(cobs,cobs)
 importFrom(doParallel,registerDoParallel)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
@@ -42,20 +46,31 @@ importFrom(igraph,clusters)
 importFrom(igraph,graph.data.frame)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,graph_from_data_frame)
-importFrom(IRanges,reduce)
 importFrom(limma,contrasts.fit)
 importFrom(limma,eBayes)
 importFrom(limma,lmFit)
 importFrom(limma,topTable)
 importFrom(limma,voom)
+importFrom(matrixStats,colCumsums)
 importFrom(matrixStats,rowMaxs)
+importFrom(matrixStats,rowMins)
+importFrom(matrixStats,rowQuantiles)
+importFrom(matrixStats,rowVars)
+importFrom(methods,'slot<-')
 importFrom(methods,as)
+importFrom(methods,new)
+importFrom(methods,slot)
 importFrom(nnls,nnls)
 importFrom(prodlim,row.match)
+importFrom(qvalue,qvalue)
 importFrom(stats,dist)
+importFrom(stats,pbeta)
+importFrom(stats,predict)
 importFrom(stats,qnorm)
 importFrom(stats,quantile)
+importFrom(stats,rnorm)
 importFrom(stats,runif)
+importFrom(stats,setNames)
 importFrom(stringr,str_count)
 importFrom(utils,combn)
 importFrom(utils,read.delim)
@@ -63,7 +78,3 @@ importFrom(utils,read.table)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,write.table)
-importFrom(qvalue,qvalue)
-importFrom(cobs,cobs)
-importFrom(sleuth,read_kallisto_h5)
-
