--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ importFrom(MASS,Null)
 importFrom(MASS,ginv)
 importFrom(RBGL,connectedComp)
 importFrom(S4Vectors,queryHits)
+importFrom(S4Vectors,split)
 importFrom(S4Vectors,subjectHits)
 importFrom(affxparser,writeCdf)
 importFrom(cobs,cobs)
