jaf: read .h5 files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,7 +64,7 @@ importFrom(methods,slot)
 importFrom(nnls,nnls)
 importFrom(prodlim,row.match)
 importFrom(qvalue,qvalue)
-importFrom(sleuth,read_kallisto_h5)
+importFrom(rhdf5,h5read)
 importFrom(stats,dist)
 importFrom(stats,pbeta)
 importFrom(stats,predict)
