--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: An effective identification of alternative splicing events
 	   using junction arrays and RNA-Seq data
 Version: 1.3.0
-Author: Juan Pablo Romero, Ander Muniategui, Fernando Carazo, Ander Aramburu, Angel Rubio
+Author: Juan Pablo Romero, Juan Ferrer-Bonsoms, Ander Muniategui, Fernando Carazo, Ander Aramburu, Angel Rubio
 Maintainer: Juan Pablo Romero <jpromero@ceit.es>
 Description: EventPointer is an R package to identify alternative splicing events 
 		that involve either simple (case-control experiment) or complex experimental designs 
