--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(EventPointer_RNASeq)
 export(EventPointer_RNASeq_IGV)
 export(EventPointer_RNASeq_TranRef)
 export(EventsGTFfromTrancriptomeGTF)
+export(FindPrimers)
 export(GetPSI_FromTranRef)
 export(PSI_Statistic)
 export(PrepareBam_EP)
@@ -18,6 +19,10 @@ import(Matrix)
 import(SGSeq)
 import(SummarizedExperiment)
 importFrom('methods',is)
+importFrom(BSgenome,getSeq)
+importFrom(BSgenome.Hsapiens.UCSC.hg38,Hsapiens)
+importFrom(Biostrings,DNAString)
+importFrom(Biostrings,reverseComplement)
 importFrom(GenomeInfoDb,'seqlevelsStyle<-')
 importFrom(GenomeInfoDb,seqlevelsStyle)
 importFrom(GenomeInfoDb,seqnames)
@@ -32,7 +37,9 @@ importFrom(IRanges,reduce)
 importFrom(IRanges,relist)
 importFrom(MASS,Null)
 importFrom(MASS,ginv)
+importFrom(Matrix,Diagonal)
 importFrom(RBGL,connectedComp)
+importFrom(S4Vectors,isEmpty)
 importFrom(S4Vectors,queryHits)
 importFrom(S4Vectors,split)
 importFrom(S4Vectors,subjectHits)
@@ -42,8 +49,12 @@ importFrom(doParallel,registerDoParallel)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(graph,ftM2graphNEL)
+importFrom(igraph,all_simple_paths)
 importFrom(igraph,as_adj)
+importFrom(igraph,as_adjacency_matrix)
+importFrom(igraph,as_ids)
 importFrom(igraph,clusters)
+importFrom(igraph,distances)
 importFrom(igraph,graph.data.frame)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(igraph,graph_from_data_frame)
@@ -74,6 +85,8 @@ importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(stringr,str_count)
+importFrom(stringr,str_length)
+importFrom(stringr,str_replace)
 importFrom(utils,combn)
 importFrom(utils,read.delim)
 importFrom(utils,read.table)
