--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,26 +4,38 @@ export(CDFfromGTF)
 export(CDFfromGTF_Multipath)
 export(EventDetection)
 export(EventDetectionMultipath)
+export(EventDetection_transcriptome)
 export(EventPointer)
+export(EventPointer_Bootstraps)
 export(EventPointer_IGV)
 export(EventPointer_RNASeq)
 export(EventPointer_RNASeq_IGV)
 export(EventPointer_RNASeq_TranRef)
-export(EventsGTFfromTrancriptomeGTF)
+export(EventPointer_RNASeq_TranRef_IGV)
 export(FindPrimers)
 export(GetPSI_FromTranRef)
 export(PSI_Statistic)
 export(PrepareBam_EP)
-export(getbootstrapkallisto)
+export(Protein_Domain_Enrichment)
+export(ResulTable)
+export(getbootstrapdata)
+import(GenomicRanges)
 import(Matrix)
 import(SGSeq)
 import(SummarizedExperiment)
+import(doParallel)
+import(foreach)
+import(glmnet)
+import(iterators)
+import(poibin)
+import(rhdf5)
 importFrom('methods',is)
 importFrom(BSgenome,getSeq)
-importFrom(BSgenome.Hsapiens.UCSC.hg38,Hsapiens)
 importFrom(Biostrings,DNAString)
 importFrom(Biostrings,reverseComplement)
 importFrom(GenomeInfoDb,'seqlevelsStyle<-')
+importFrom(GenomeInfoDb,`seqlevels<-`)
+importFrom(GenomeInfoDb,seqlevels)
 importFrom(GenomeInfoDb,seqlevelsStyle)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicFeatures,makeTxDbFromBiomart)
@@ -32,7 +44,10 @@ importFrom(GenomicFeatures,makeTxDbFromUCSC)
 importFrom(GenomicRanges,granges)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
 importFrom(IRanges,"%over%")
+importFrom(IRanges,IQR)
+importFrom(IRanges,IRanges)
 importFrom(IRanges,disjoin)
+importFrom(IRanges,median)
 importFrom(IRanges,reduce)
 importFrom(IRanges,relist)
 importFrom(MASS,Null)
@@ -40,9 +55,11 @@ importFrom(MASS,ginv)
 importFrom(Matrix,Diagonal)
 importFrom(RBGL,connectedComp)
 importFrom(S4Vectors,isEmpty)
+importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,queryHits)
 importFrom(S4Vectors,split)
 importFrom(S4Vectors,subjectHits)
+importFrom(abind,abind)
 importFrom(affxparser,writeCdf)
 importFrom(cobs,cobs)
 importFrom(doParallel,registerDoParallel)
@@ -63,10 +80,14 @@ importFrom(limma,eBayes)
 importFrom(limma,lmFit)
 importFrom(limma,topTable)
 importFrom(limma,voom)
+importFrom(lpSolve,lp)
 importFrom(matrixStats,colCumsums)
+importFrom(matrixStats,iqr)
 importFrom(matrixStats,rowMaxs)
 importFrom(matrixStats,rowMins)
 importFrom(matrixStats,rowQuantiles)
+importFrom(matrixStats,rowRanks)
+importFrom(matrixStats,rowSums2)
 importFrom(matrixStats,rowVars)
 importFrom(methods,'slot<-')
 importFrom(methods,as)
@@ -75,10 +96,22 @@ importFrom(methods,slot)
 importFrom(nnls,nnls)
 importFrom(prodlim,row.match)
 importFrom(qvalue,qvalue)
-importFrom(rhdf5,h5read)
+importFrom(speedglm,control)
+importFrom(speedglm,is.sparse)
+importFrom(stats,binomial)
+importFrom(stats,coef)
 importFrom(stats,dist)
+importFrom(stats,dnorm)
+importFrom(stats,gaussian)
+importFrom(stats,model.matrix)
+importFrom(stats,nlminb)
 importFrom(stats,pbeta)
+importFrom(stats,phyper)
+importFrom(stats,pnorm)
+importFrom(stats,ppoints)
 importFrom(stats,predict)
+importFrom(stats,pt)
+importFrom(stats,qhyper)
 importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,rnorm)
@@ -87,9 +120,15 @@ importFrom(stats,setNames)
 importFrom(stringr,str_count)
 importFrom(stringr,str_length)
 importFrom(stringr,str_replace)
+importFrom(tximport,tximport)
 importFrom(utils,combn)
 importFrom(utils,read.delim)
 importFrom(utils,read.table)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,write.table)
+useDynLib(EventPointer,gldist_dgl)
+useDynLib(EventPointer,gldist_pgl)
+useDynLib(EventPointer,gldist_qdgl)
+useDynLib(EventPointer,gldist_qgl)
+useDynLib(EventPointer,gldist_rgl)
