--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: EventPointer
 Type: Package
 Title: An effective identification of alternative splicing events
 	   using junction arrays and RNA-Seq data
-Version: 3.0.0
-Authors@R: c(person("Juan Pablo","Romero",role=c("aut","cre"),email = "jpromero@ceit.es"),
-  person("Juan A.", "Ferrer-Bonsoms",role=c("aut"),email = "jafhernandez@tecnun.es"),
+Version: 2.5.5
+Authors@R: c(person("Juan Pablo","Romero",role=c("aut"),email = "jpromero@ceit.es"),
+  person("Juan A.", "Ferrer-Bonsoms",role=c("aut","cre"),email = "jafhernandez@tecnun.es"),
   person("Pablo", "Sacristan"),
   person("Ander", "Muniategui"),
   person("Fernando", "Carazo"),
@@ -23,7 +23,7 @@ Description: EventPointer is an R package to identify alternative splicing event
 		splicing events in IGV. This eases the interpretation of results and the design 
 		of primers for standard PCR validation.
 Depends:
-    R (>= 4.0),
+    R (>= 3.4),
     SGSeq,
     Matrix,
     SummarizedExperiment
