jaf_ prediction of RBP

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ importFrom(abind,abind)
 importFrom(affxparser,writeCdf)
 importFrom(cobs,cobs)
 importFrom(doParallel,registerDoParallel)
+importFrom(fgsea,fgsea)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(graph,ftM2graphNEL)
