jaf_ reclassification of complex events

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(EventPointer_RNASeq)
 export(EventPointer_RNASeq_IGV)
 export(EventPointer_RNASeq_TranRef)
 export(EventPointer_RNASeq_TranRef_IGV)
+export(Events_ReClassification)
 export(FindPrimers)
 export(GetPSI_FromTranRef)
 export(PSI_Statistic)
