--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Authors@R: c(person("Juan Pablo","Romero",role=c("aut"),email = "jpromero@ceit.e
   person("Ander", "Aramburu",role=c("aut")),
   person("Angel", "Rubio",role=c("aut"),email = "arubio@tecnun.es")
     )
-Description: EventPointer is an R package to identify alternative splicing events 
+Description: EventPointer (EP) is an R package to identify alternative splicing events 
 		that involve either simple (case-control experiment) or complex experimental designs 
 		such as time course experiments and studies including paired-samples. The algorithm can
 		be used to analyze data from either junction arrays (Affymetrix Arrays) or sequencing data (RNA-Seq). 
